# telegram-bot-wrapper

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: .env.example  bot.py
src/bot/: __init__.py  _bot.py  _config.py  _main.py
